# Stratum-Sports

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  Makefile  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml
.agent/workflows/: implement-webhooks.md
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  kalshi_skew_analysis.json  requirements.txt  start.sh  worker-start.sh
backend/alembic/: env.py
backend/app/: cli.py  main.py
backend/docs/: KALSHI_INTEGRATION_VERIFICATION.md
backend/scripts/: analyze_kalshi_skew_vs_clv.py  backfill_nba_liquidity.py  check_signals.py  create_test_user.py  generate_nba_backfill.py  inspect_games.py  promote_user.py  provision_kalshi_test_data.py  quant_factor_analysis.py  run_kalshi_ingestion.py  test_ratelimit.py  test_webhook.py
backend/tests/: conftest.py  test_alignment_service.py  (+41 more)
deploy/: README.md  ufw.sh
docs/: admin-control-plane.md  deployment-aws-ec2.md  developer-quickstart.md  development-journal.md  product-tiers.md  production-runbook.md  quickstart.md  signal-integrity.md  user-guide.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
mcp/: Dockerfile  README.md  claude_desktop_config.json  pyproject.toml
mcp/stratum_mcp/: app.py  client.py  server.py
mcp/stratum_mcp/tools/: __init__.py  books.py  clv.py  consensus.py  games.py  opportunities.py  signals.py  watchlist.py
scripts/: README.md  pre_push_check.sh  smoke_auth.sh  trace_signal_feed.py
(+237 files in other folders)
